# Traffic-Simulation

./: CMakeLists.txt  Doxyfile  main.cpp  main.h  output.txt  tests.cpp
docs/html/: Baan_8cpp_source.html  Baan_8h_source.html  Bushalte_8cpp_source.html  Bushalte_8h_source.html  Kruispunt_8cpp_source.html  Kruispunt_8h_source.html  Linux_2DesignByContract_8h_source.html  ParseFile_8cpp_source.html  ParseFile_8h_source.html  TrafficSimulation_8cpp_source.html  TrafficSimulation_8h_source.html  Verkeersverkeerslicht_8cpp_source.html  Verkeersverkeerslicht_8h_source.html  VoertuigGen_8cpp_source.html  VoertuigGen_8h_source.html  Voertuig_8cpp_source.html  Voertuig_8h_source.html  Windows_2DesignByContract_8h_source.html  annotated.html  annotated_dup.js  classAuto-members.html  classAuto.html  classBaan-members.html  classBaan.html  classBrandweerwagen-members.html  classBrandweerwagen.html  classBus-members.html  classBus.html  classBushalte-members.html  classBushalte.html  classBushalte.js  classKruispunt-members.html  classKruispunt.html  classPolitiecombi-members.html  classPolitiecombi.html  classTiXmlAttribute-members.html  classTiXmlAttribute.html  classTiXmlAttribute.js  classTiXmlAttributeSet-members.html  classTiXmlAttributeSet.html  (+132 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_3.js  all_5.js  all_6.js  all_8.js  all_9.js  all_b.js  all_c.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  enums_0.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  functions_3.js  functions_4.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_e.js  functions_f.js  searchdata.js  variables_0.js
docs/latex/: Baan_8cpp_source.tex  Baan_8h_source.tex  Bushalte_8cpp_source.tex  Bushalte_8h_source.tex  Kruispunt_8cpp_source.tex  Kruispunt_8h_source.tex  Linux_2DesignByContract_8h_source.tex  ParseFile_8cpp_source.tex  ParseFile_8h_source.tex  TrafficSimulation_8cpp_source.tex  TrafficSimulation_8h_source.tex  Verkeersverkeerslicht_8cpp_source.tex  Verkeersverkeerslicht_8h_source.tex  VoertuigGen_8cpp_source.tex  VoertuigGen_8h_source.tex  Voertuig_8cpp_source.tex  Voertuig_8h_source.tex  Windows_2DesignByContract_8h_source.tex  annotated.tex  classAuto.eps  classAuto.tex  classBaan.tex  classBrandweerwagen.eps  classBrandweerwagen.tex  classBus.eps  classBus.tex  classBushalte.tex  classKruispunt.tex  classPolitiecombi.eps  classPolitiecombi.tex  classTiXmlAttribute.tex  classTiXmlAttributeSet.tex  classTiXmlBase.tex  classTiXmlComment.tex  classTiXmlDeclaration.tex  classTiXmlDocument.tex  classTiXmlElement.tex  classTiXmlHandle.tex  classTiXmlNode.tex  classTiXmlOutStream.tex  (+32 more)
src/: ParseFile.cpp  ParseFile.h  TrafficSimulation.cpp  TrafficSimulation.h  TrafficSimulator.cpp  TrafficSimulator.h  demonstration.cpp  main.cpp  main.h  structs.cpp  structs.h  tests.cpp
src/Classes/: Baan.cpp  Baan.h  Bushalte.cpp  Bushalte.h  Kruispunt.cpp  Kruispunt.h  Verkeersverkeerslicht.cpp  Verkeersverkeerslicht.h  Voertuig.cpp  Voertuig.h  VoertuigGen.cpp  VoertuigGen.h
src/Linux/: DesignByContract.h
src/Windows/: DesignByContract.h
src/test/: Demonstratie.xml  test1.xml  test2.xml  test_BusStoptBijBushalte.xml  test_DoorrijdenType.xml  test_DoorrijdenType1.xml  test_DoorrijdenType2.xml  test_DoorrijdenType3.xml  test_DoorrijdenType4.xml  test_DoorrijdenTypeFalse.xml  test_InlezenBaan.xml  test_InlezenBaan1.xml  test_InlezenBaan2.xml  test_InlezenBaan3.xml  test_InlezenBaan4.xml  test_InlezenBaanFalse.xml  test_InlezenTest1.xml  test_InlezenTest2.xml  test_InlezenTest3.xml  test_InlezenTest4.xml  test_InlezenTestFalse.xml  test_VerkeerslichtTest.xml  test_VerkeerslichtTest1.xml  test_VerkeerslichtTest3.xml  test_VerkeerslichtTest4.xml  test_VerkeerslichtTestFalse.xml  test_VoertuigBerekenSnelheidEnPositie.xml  test_VoertuigBerekenVersnelling.xml  test_VoertuigGenerator.xml  test_VoertuigVerwijderen.xml  test_VoertuigVerwijderen1.xml  test_VoertuigVerwijderen2.xml  test_VoertuigVerwijderen3.xml  test_VoertuigVerwijderen4.xml  test_Wegkiezen.xml  test_Wegkiezen1.xml  test_Wegkiezen2.xml  test_Wegkiezen3.xml  test_Wegkiezen4.xml  test_WegkiezenFalse.xml  (+19 more)
test/: test1.xml
